[package]
name = "esphome-rs-poc"
version = "0.1.0"
authors = ["sehraf <sehraf42@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.78"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std", "embedded-svc/std"]
alloc = ["esp-idf-svc/alloc", "embedded-svc/alloc"]
nightly = ["esp-idf-svc/nightly", "embedded-svc/nightly"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
embedded-svc = { version = "0.27", default-features = false }
protobuf = "3.3"
anyhow = "1"

[build-dependencies]
embuild = "0.31.3"
protobuf-codegen = "3.3"
